<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/authentication_background_color"
    tools:context=".view.home.fragment.UpdateProfileFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/update_profile"
        android:textColor="@color/authentication_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textColor="@color/authentication_text_color"
        android:textColorHint="@color/authentication_text_color_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:textSize="18sp"
        android:text="@string/your_email"
        android:textColor="@color/authentication_text_color"
        app:layout_constraintEnd_toEndOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@+id/updateProfileButton" />

    <Button
        android:id="@+id/updateProfileButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update_profile"
        app:layout_constraintEnd_toEndOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/sendEmailVerificationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_email_verification"
        app:layout_constraintEnd_toEndOf="@+id/emailTextView"
        app:layout_constraintStart_toStartOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:textColor="@color/authentication_text_color"
        android:textColorHint="@color/authentication_text_color_hint"
        app:layout_constraintEnd_toEndOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@+id/sendEmailVerificationButton" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/your_password_again"
        android:inputType="textPassword"
        android:textColor="@color/authentication_text_color"
        android:textColorHint="@color/authentication_text_color_hint"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update_password"
        app:layout_constraintEnd_toEndOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>